--- a/package.json
+++ b/package.json
@@ -3,21 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.7.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^3.0.0-beta.6",
     "axios": "^0.26.1",
-    "react": "^18.0.0",
+    "emailjs-com": "^3.2.0",
+    "react": "^18.1.0",
     "react-countup": "^6.2.0",
-    "react-dom": "^18.0.0",
+    "react-dom": "^18.1.0",
     "react-grid-gallery": "^0.5.5",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.7",
     "react-slick": "^0.28.1",
+    "react-toastify": "^9.0.1",
+    "react-validation": "^3.0.7",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.5",
+    "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
