--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-grid-gallery": "^0.5.5",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.7",
     "react-slick": "^0.28.1",
     "react-toastify": "^9.0.1",
